@@ -124,7 +124,8 @@ typedef enum
 	ITEM_TYPE_SNMPv3,
 	ITEM_TYPE_ZABBIX_ACTIVE,
 	ITEM_TYPE_AGGREGATE,
-	ITEM_TYPE_HTTPTEST
+	ITEM_TYPE_HTTPTEST,
+	ITEM_TYPE_EXTERNAL
 } zbx_item_type_t;
 
 /* Event sources */
