@@ -1,5 +1,6 @@
 Changes for 1.3.4:
 
+ - added server-side support of external checks. Thanks to Mike Nestor. (Alexei)
  - fixed incorrect SQL statement for ICMP check (Alexei)
  - support of multiple actions per set of conidtions (Alexei)
  - added viwer of dicovery events (Eugene)
